Update README and HTML files with clan information, features, and footer links.
1:1 information transformation to Github

--- a/index.html
+++ b/index.html
@@ -100,12 +100,15 @@
     <footer>
         <div class="footer-content">
             <div class="social-links">
-                <span>Here are the links to our</span>
-                <a href="#" target="_blank">Instagram</a>
-                <span>and</span>
-                <a href="#" target="_blank">Discord</a>
+                <span>Hier sind die Links zu unserem</span>
+                <a href="https://instagram.com/clash_of_clans_die_krieger" target="_blank">Instagram</a>
+                <span>und</span>
+                <a href="https://discord.gg/rh8PwFjVrC" target="_blank">Discord</a>
             </div>
-            <p class="footer-text">If you have any questions, feel free to contact us! © 2025 Die Krieger</p>
+            <p class="footer-text">Bei Fragen gerne melden! © 2025 Die Krieger</p>
+            <div class="footer-links">
+                <a href="impressum.html">Impressum</a>
+            </div>
         </div>
     </footer>
 </body>
