--- a/regeln.html
+++ b/regeln.html
@@ -124,7 +124,9 @@
                             <li>viele Clanspielpunkte sammelst</li>
                             <li>alle Angriffe des Überfalls nutzt</li>
                         </ul>
-                        <p>Durch diese klaren Kriterien möchten wir sicherstellen, dass Belohnungen und Beförderungen fair und nachvollziehbar vergeben werden und jedes Clanmitglied die Chance hat, sich durch Engagement hervorzutun.</p>
+                        <p>Durch diese klaren Kriterien möchten wir sicherstellen, dass Belohnungen und Beförderungen
+                            fair und nachvollziehbar vergeben werden und jedes Clanmitglied die Chance hat, sich durch
+                            Engagement hervorzutun.</p>
                     </div>
                 </div>
             </section>
@@ -137,7 +139,9 @@
                         <p>Teilnahme ist nicht verpflichtend.</p>
                         <p>Wenn mitgemacht wird, dann müssen min. 500 Punkte gesammelt werden.</p>
                         <p>Wenn zu wenig Punkte geholt werden, dann gibt es eine Verwarnung¹ oder einen Kick!</p>
-                        <p>Die Clanspiele sind eine wichtige Quelle für wertvolle Ressourcen und Gegenstände für alle Mitglieder. Durch das Erreichen der Mindestpunktzahl stellt jeder Teilnehmer sicher, dass er zum Gesamterfolg des Clans beiträgt.</p>
+                        <p>Die Clanspiele sind eine wichtige Quelle für wertvolle Ressourcen und Gegenstände für alle
+                            Mitglieder. Durch das Erreichen der Mindestpunktzahl stellt jeder Teilnehmer sicher, dass er
+                            zum Gesamterfolg des Clans beiträgt.</p>
                     </div>
                 </div>
             </section>
@@ -148,10 +152,15 @@
                     <h2 class="rule-title">Zu dem Überfallwochenende</h2>
                     <div class="rule-content">
                         <p>Bei dem Überfallwochenende müssen alle Angriffe genutzt werden!</p>
-                        <p>Eine einfache und sehr zeitsparende Methode um all deine Angriffe hinter dich zu bringen, findest du unter <a href="ankuendigungen.html" style="color: var(--accent-color); text-decoration: none; font-weight: 600;">Ankündigungen</a>.</p>
+                        <p>Eine einfache und sehr zeitsparende Methode um all deine Angriffe hinter dich zu bringen,
+                            findest du unter <a href="ankuendigungen.html"
+                                style="color: var(--accent-color); text-decoration: none; font-weight: 600;">Ankündigungen</a>.
+                        </p>
                         <p>Wenn ein Bezirk begonnen wurde, muss dieser auch abgeschlossen werden.</p>
                         <p>Ein Bezirk darf einem anderen Spieler nicht einfach weggeschnappt werden.</p>
-                        <p>Das Überfallwochenende ist eine wichtige gemeinschaftliche Aktivität, die dem gesamten Clan zugute kommt. Durch koordinierte Angriffe maximieren wir die Belohnungen für alle Mitglieder.</p>
+                        <p>Das Überfallwochenende ist eine wichtige gemeinschaftliche Aktivität, die dem gesamten Clan
+                            zugute kommt. Durch koordinierte Angriffe maximieren wir die Belohnungen für alle
+                            Mitglieder.</p>
                     </div>
                 </div>
             </section>
@@ -163,8 +172,10 @@
                     <div class="rule-content">
                         <p>Aktuell haben wir alle Gebäude auf dem maximalen Level.</p>
                         <p class="rule-note">Kleine Info am Rande:<br>
-                        Wenn dein Stadtgold voll ist und du es zum Beispiel beim Season Pass einsammelst = wird dies automatisch in Juwelen umgewandelt.</p>
-                        <p>Unsere Clanstadt ist das Resultat gemeinsamer Anstrengungen über lange Zeit. Die maximalen Level aller Gebäude bieten uns optimale Vorteile in den verschiedenen Spielaspekten.</p>
+                            Wenn dein Stadtgold voll ist und du es zum Beispiel beim Season Pass einsammelst = wird dies
+                            automatisch in Juwelen umgewandelt.</p>
+                        <p>Unsere Clanstadt ist das Resultat gemeinsamer Anstrengungen über lange Zeit. Die maximalen
+                            Level aller Gebäude bieten uns optimale Vorteile in den verschiedenen Spielaspekten.</p>
                     </div>
                 </div>
             </section>
@@ -175,8 +186,10 @@
                     <h2 class="rule-title">Verwarnungssystem</h2>
                     <div class="rule-content">
                         <p class="rule-note">¹) Verwarnungen werden schriftlich notiert.<br>
-                        Wenn zu viele Verwarnungen stattgefunden haben, kann es zu einem Rauswurf kommen.</p>
-                        <p>Das Verwarnungssystem dient dazu, faire und transparente Entscheidungen zu treffen. Es gibt jedem Mitglied die Chance, sein Verhalten zu verbessern, bevor drastischere Maßnahmen ergriffen werden.</p>
+                            Wenn zu viele Verwarnungen stattgefunden haben, kann es zu einem Rauswurf kommen.</p>
+                        <p>Das Verwarnungssystem dient dazu, faire und transparente Entscheidungen zu treffen. Es gibt
+                            jedem Mitglied die Chance, sein Verhalten zu verbessern, bevor drastischere Maßnahmen
+                            ergriffen werden.</p>
                     </div>
                 </div>
             </section>
@@ -200,13 +213,18 @@
     </div>
     <!-- Footer -->
     <footer>
-        <div class="social-links">
-            <span>Hier sind die Links zu unserem</span>
-            <a href="#" target="_blank">Instagram</a>
-            <span>und</span>
-            <a href="#" target="_blank">Discord</a>
+        <div class="footer-content">
+            <div class="social-links">
+                <span>Hier sind die Links zu unserem</span>
+                <a href="https://instagram.com/clash_of_clans_die_krieger" target="_blank">Instagram</a>
+                <span>und</span>
+                <a href="https://discord.gg/rh8PwFjVrC" target="_blank">Discord</a>
+            </div>
+            <p class="footer-text">Bei Fragen gerne melden! © 2025 Die Krieger</p>
+            <div class="footer-links">
+                <a href="impressum.html">Impressum</a>
+            </div>
         </div>
-        <p class="footer-text">Bei Fragen gerne melden! © 2025 Die Krieger</p>
     </footer>
 </body>
 
