--- a/organisatorisches.html
+++ b/organisatorisches.html
@@ -130,13 +130,18 @@
     </div>
     <!-- Footer -->
     <footer>
-        <div class="social-links">
-            <span>Hier sind die Links zu unserem</span>
-            <a href="#" target="_blank">Instagram</a>
-            <span>und</span>
-            <a href="#" target="_blank">Discord</a>
+        <div class="footer-content">
+            <div class="social-links">
+                <span>Hier sind die Links zu unserem</span>
+                <a href="https://instagram.com/clash_of_clans_die_krieger" target="_blank">Instagram</a>
+                <span>und</span>
+                <a href="https://discord.gg/rh8PwFjVrC" target="_blank">Discord</a>
+            </div>
+            <p class="footer-text">Bei Fragen gerne melden! © 2025 Die Krieger</p>
+            <div class="footer-links">
+                <a href="impressum.html">Impressum</a>
+            </div>
         </div>
-        <p class="footer-text">Bei Fragen gerne melden! © 2025 Die Krieger</p>
     </footer>
 </body>
 
