Update footer links for consistency and visibility across multiple pages

--- a/ankuendigungen.html
+++ b/ankuendigungen.html
@@ -134,9 +134,9 @@
         <div class="footer-content">
             <div class="social-links">
                 <span>Hier sind die Links zu unserem</span>
-                <a href="https://instagram.com/clash_of_clans_die_krieger" target="_blank">Instagram</a>
+                <a target="_blank" href="https://instagram.com/clash_of_clans_die_krieger" target="_blank">Instagram</a>
                 <span>und</span>
-                <a href="https://discord.gg/rh8PwFjVrC" target="_blank">Discord</a>
+                <a target="_blank" href="https://discord.gg/rh8PwFjVrC" target="_blank">Discord</a>
             </div>
             <p class="footer-text">Bei Fragen gerne melden! © 2025 Die Krieger</p>
             <div class="footer-links">
