--- a/organisatorisches.html
+++ b/organisatorisches.html
@@ -50,7 +50,7 @@
                     <p>Bei Fragen bitte an Muhmich wenden.</p>
 
                     <div class="button-container">
-                        <button class="action-btn">Liste für Boni</button>
+                        <a target="_blank" href="https://docs.google.com/spreadsheets/d/12OvUoyu31mZg9Uxi8MG7UETkIGHuPQVgPflOCFxi5JE/edit?usp=sharing" class="action-btn" style="text-decoration: none; display: inline-block;">Liste für Boni</a>
                     </div>
                 </div>
             </section>
@@ -133,9 +133,9 @@
         <div class="footer-content">
             <div class="social-links">
                 <span>Hier sind die Links zu unserem</span>
-                <a href="https://instagram.com/clash_of_clans_die_krieger" target="_blank">Instagram</a>
+                <a target="_blank" href="https://instagram.com/clash_of_clans_die_krieger" target="_blank">Instagram</a>
                 <span>und</span>
-                <a href="https://discord.gg/rh8PwFjVrC" target="_blank">Discord</a>
+                <a target="_blank" href="https://discord.gg/rh8PwFjVrC" target="_blank">Discord</a>
             </div>
             <p class="footer-text">Bei Fragen gerne melden! © 2025 Die Krieger</p>
             <div class="footer-links">
