Ref to COC Stats

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
                 <h1>Willkommen bei Die Krieger</h1>
 
                 <div class="clan-logo">
-                    <img src="Images/ClanLogoLvl23.png" alt="Die Krieger Clan Level 23">
+                    <a href="https://www.clashofstats.com/de/clans/die-krieger-C8JPQRYL/summary" target="_blank">
+                        <img src="Images/ClanLogoLvl23.png" alt="Die Krieger Clan Level 23">
+                    </a>
                 </div>
 
                 <div class="glass-card">
