--- a/index.html
+++ b/index.html
@@ -47,24 +47,15 @@
                 </div>
 
                 <div class="glass-card">
-                    <p>Herzlich Willkommen auf der offiziellen Seite vom dem Clash of Clans Clan Die Krieger!</p>
-                    <p>Falls du Interesse hast uns beizutreten, dann schick ganz einfach eine Beitrittsanfrage oder
-                        kontaktiere uns auf Instagram oder Discord.</p>
-                    <p>Wir freuen uns auf dich!</p>
+                    <p>Willkommen bei Die Krieger! Interesse am Beitritt? Schick eine Anfrage oder kontaktier uns via Instagram oder Discord.</p>
                 </div>
             </section>
 
             <!-- New section: About Our Clan -->
             <section>
                 <div class="glass-card">
-                    <h2 class="content-title">Über Unseren Clan</h2>
-                    <p>Als Level 23 Clan sind wir eine eingeschworene Gemeinschaft von engagierten Spielern, die das
-                        gemeinsame Ziel verfolgen, in allen Aspekten des Spiels zu glänzen. Von den Clankriegen über die
-                        Clankriegsliga bis hin zu den Clankapitalgefechten - wir sind aktiv und ehrgeizig!</p>
-                    <p>Unser Clan besteht aus Spielern verschiedener Rathauslevel, wobei wir besonders Wert auf
-                        Aktivität und gegenseitige Unterstützung legen. Wir verstehen, dass Clash of Clans ein Spiel
-                        ist, das von der Gemeinschaft lebt, und daher fördern wir ein freundliches und hilfsbereites
-                        Umfeld für alle Mitglieder.</p>
+                    <h2 class="content-title">Über Uns</h2>
+                    <p>Level 23 Clan mit Fokus auf Clankriege, Clankriegsliga und Clankapitalgefechte. Wir sind aktiv und unterstützen uns gegenseitig.</p>
                 </div>
             </section>
 
@@ -74,24 +65,20 @@
                     <h2 class="content-title">Was wir bieten</h2>
                     <div class="grid">
                         <div>
-                            <h3>Regular Clan Wars</h3>
-                            <p>Wir nehmen regelmäßig an Clankriegen teil und haben eine durchdachte Strategie, um unsere
-                                Erfolgsquote zu maximieren.</p>
+                            <h3>Clankriege</h3>
+                            <p>Regelmäßige Teilnahme mit durchdachter Strategie.</p>
                         </div>
                         <div>
-                            <h3>Active Donations</h3>
-                            <p>Unsere Mitglieder sind sehr aktiv beim Spenden von Truppen und Zaubern, sodass du immer
-                                die Unterstützung erhältst, die du brauchst.</p>
+                            <h3>Spenden</h3>
+                            <p>Aktive Mitglieder für schnelle Truppenverstärkung.</p>
                         </div>
                         <div>
-                            <h3>Friendly Community</h3>
-                            <p>Bei uns findest du eine hilfsbereite und freundliche Atmosphäre, in der Fragen willkommen
-                                sind und Erfahrungen geteilt werden.</p>
+                            <h3>Community</h3>
+                            <p>Hilfsbereite und freundliche Atmosphäre.</p>
                         </div>
                         <div>
-                            <h3>Strategic Advice</h3>
-                            <p>Unsere erfahrenen Spieler helfen dir gerne mit Tipps zu Angriffsstrategien und
-                                Dorfentwicklung.</p>
+                            <h3>Strategieberatung</h3>
+                            <p>Tipps zu Angriffen und Dorfbau von erfahrenen Spielern.</p>
                         </div>
                     </div>
                 </div>
