--- a/index.html
+++ b/index.html
@@ -20,10 +20,19 @@
         <header>
             <div class="header-content">
                 <div class="logo-title">
-                    <img src="Images/ClanLogoLvl23.png" alt="Die Krieger Logo" class="logo-img">
+                    <a href="https://www.clashofstats.com/de/clans/die-krieger-C8JPQRYL/summary" target="_blank">
+                        <img src="Images/ClanLogoLvl23.png" alt="Die Krieger Logo" class="logo-img">
+                    </a>
                     <a href="index.html" class="site-title">Clash of Clans - Die Krieger</a>
                 </div>
-                <button class="cta-button">Gemeinsam Stark.</button>
+                <div class="social-header">
+                    <a href="https://instagram.com/clash_of_clans_die_krieger" target="_blank">
+                        <img src="Images/Instagram.png" alt="Instagram" class="social-icon">
+                    </a>
+                    <a href="https://discord.gg/rh8PwFjVrC" target="_blank">
+                        <img src="Images/Discord.png" alt="Discord" class="social-icon">
+                    </a>
+                </div>
             </div>
             <nav class="main-nav">
                 <ul>
@@ -52,12 +61,12 @@
             </section>
 
             <!-- New section: About Our Clan -->
-            <section>
+            <!-- <section>
                 <div class="glass-card">
                     <h2 class="content-title">Über Uns</h2>
                     <p>Level 23 Clan mit Fokus auf Clankriege, Clankriegsliga und Clankapitalgefechte. Wir sind aktiv und unterstützen uns gegenseitig.</p>
                 </div>
-            </section>
+            </section> -->
 
             <!-- New section: What we offer -->
             <section>
