--- a/ankuendigungen.html
+++ b/ankuendigungen.html
@@ -43,8 +43,7 @@
                 <div class="glass-card">
                     <p>Lieber Clan, hier ist ein Konzept, um die Effizienz des Überfallwochenendes des Clans enorm zu
                         steigern!</p>
-                    <p>Einige von uns praktizieren dies bereits erfolgreich und brauchen dafür nicht länger als 5
-                        Minuten!</p>
+                    <p>Diese Methode kostet dich maximal 5 Minuten!</p>
 
                     <h2 class="tactic-heading">Hier die Taktik!</h2>
 
@@ -70,7 +69,7 @@
             </section>
 
             <!-- New section: Details about the tactic -->
-            <section>
+            <!-- <section>
                 <div class="glass-card">
                     <h2 class="content-title">Vorteile dieser Taktik</h2>
 
@@ -102,10 +101,10 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
 
             <!-- New section: Upcoming events -->
-            <section>
+            <!-- <section>
                 <div class="glass-card">
                     <h2 class="content-title">Kommende Ereignisse</h2>
 
@@ -126,7 +125,7 @@
                     <p>Weitere Ankündigungen werden regelmäßig auf dieser Seite sowie in unserem Discord-Server
                         veröffentlicht. Schau also regelmäßig vorbei, um keine wichtigen Informationen zu verpassen!</p>
                 </div>
-            </section>
+            </section> -->
         </main>
     </div>
     <!-- Footer -->
