--- a/organisatorisches.html
+++ b/organisatorisches.html
@@ -43,20 +43,18 @@
                     <p>Liebe Krieger, um Transparenz für Alle zu bieten, geben wir euch einen Einblick in unsere Liste,
                         die Bonis und Leistungen der Clankriegsliga darstellt.</p>
 
-                    <p>Die Organisation und Struktur unseres Clans ist ein wesentlicher Bestandteil unseres Erfolgs. Wir
-                        bemühen uns, faire und transparente Prozesse zu etablieren, damit jedes Clanmitglied weiß, wie
-                        Entscheidungen getroffen werden.</p>
-
                     <p>Bei Fragen bitte an Muhmich wenden.</p>
 
                     <div class="button-container">
-                        <a target="_blank" href="https://docs.google.com/spreadsheets/d/12OvUoyu31mZg9Uxi8MG7UETkIGHuPQVgPflOCFxi5JE/edit?usp=sharing" class="action-btn" style="text-decoration: none; display: inline-block;">Liste für Boni</a>
+                        <a target="_blank"
+                            href="https://docs.google.com/spreadsheets/d/12OvUoyu31mZg9Uxi8MG7UETkIGHuPQVgPflOCFxi5JE/edit?usp=sharing"
+                            class="action-btn" style="text-decoration: none; display: inline-block;">Liste für Boni</a>
                     </div>
                 </div>
             </section>
 
             <!-- New section: Clan hierarchy -->
-            <section>
+            <!-- <section>
                 <div class="glass-card">
                     <h2 class="content-title">Unsere Clan-Hierarchie</h2>
 
@@ -89,10 +87,10 @@
                         </li>
                     </ul>
                 </div>
-            </section>
+            </section> -->
 
             <!-- New section: Reward system -->
-            <section>
+            <!-- <section>
                 <div class="glass-card">
                     <h2 class="content-title">Unser Belohnungssystem</h2>
 
@@ -125,7 +123,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
         </main>
     </div>
     <!-- Footer -->
