--- a/regeln.html
+++ b/regeln.html
@@ -39,15 +39,6 @@
         <main>
             <h1 class="page-title">Hier sind die Regeln</h1>
 
-            <!-- Introduction to the rules -->
-            <div class="glass-card">
-                <p>Unsere Clanregeln wurden mit Bedacht festgelegt, um ein harmonisches Zusammenspiel und maximalen
-                    Erfolg für alle Mitglieder zu gewährleisten. Sie sind das Fundament unserer Gemeinschaft und helfen
-                    uns, als Team zu wachsen.</p>
-                <p>Bitte nimm dir einen Moment Zeit, diese Regeln zu lesen und zu verstehen. Sie sind entscheidend für
-                    unseren gemeinsamen Erfolg.</p>
-            </div>
-
             <section class="rule-section">
                 <div class="glass-card">
                     <h2 class="rule-title">Zu dem Spendenverhältnis (SV)</h2>
@@ -55,9 +46,8 @@
                         <p>Das Spendenverhältnis sollte einigermaßen ausgeglichen sein. Um eine Balance zu schaffen,
                             haben wir uns für einen Richtwert von 1:3 entschieden.</p>
                         <p>Sprich zum Beispiel: 500 / 1500</p>
-                        <p>Ein ausgewogenes Spendenverhältnis stellt sicher, dass alle Clanmitglieder die Unterstützung
-                            erhalten, die sie benötigen. Es fördert Zusammenhalt und gegenseitige Hilfe in unserem Clan.
-                        </p>
+                        <p>Das bedeutet, dass du 500 Truppen gespendet hast und 1500 Truppen erhalten hast. Dies ist ein
+                            gutes Verhältnis.</p>
                     </div>
                 </div>
             </section>
@@ -70,14 +60,10 @@
                             gib uns bitte einfach Bescheid geben.</p>
 
                         <h3><span class="emphasis">Der 1. Angriff</span> - ist immer dein Gegenüber.</h3>
-                        <p>Dein Gegenüber ist der Spieler mit demselben Rang wie du in der Kriegsaufstellung. Diese
-                            Regel sorgt für eine geordnete erste Angriffsrunde und maximiert unsere Chancen auf einen
-                            Sieg.</p>
+                        <p>Dein Gegenüber ist der Spieler mit demselben Rang wie du in der Kriegsaufstellung.
 
                         <h3><span class="emphasis">Der 2. Angriff</span> - wird nach 12 Stunden freigegeben, somit
                             sollte der erste Angriff in den ersten 12 Stunden geschehen.</h3>
-                        <p>Es ist wichtig, dass du deinen ersten Angriff früh durchführst, damit wir für die zweite
-                            Angriffsphase besser planen können.</p>
 
                         <p>Beim 2. Angriff werden meist die unteren Nummern angegriffen um fehlende Sterne zu holen.</p>
 
@@ -96,17 +82,12 @@
 
                         <p>In der Clankriegsliga wird <span class="emphasis">IMMER</span> der gegenüberliegende Gegner
                             angegriffen.</p>
-                        <p>Diese strikte Regel verhindert Chaos und stellt sicher, dass wir strategisch und koordiniert
-                            vorgehen können. Die Clankriegsliga erfordert eine andere Herangehensweise als normale
-                            Clankriege.</p>
 
                         <p class="rule-note">Die Abstimmung wer mitgenommen wird, erfolgt über die Ampel im eigenen
                             Profil.</p>
 
                         <p>Anfangs werden die stärksten Spieler mitgenommen, welche verfügbar sind und diese werden dann
                             nach unten gereiht ausgewechselt, wenn nötig.</p>
-                        <p>Dies gewährleistet, dass wir in jedem Krieg unsere bestmögliche Aufstellung haben und
-                            gleichzeitig allen Clanmitgliedern die Chance geben, teilzunehmen.</p>
                     </div>
                 </div>
             </section>
@@ -124,9 +105,6 @@
                             <li>viele Clanspielpunkte sammelst</li>
                             <li>alle Angriffe des Überfalls nutzt</li>
                         </ul>
-                        <p>Durch diese klaren Kriterien möchten wir sicherstellen, dass Belohnungen und Beförderungen
-                            fair und nachvollziehbar vergeben werden und jedes Clanmitglied die Chance hat, sich durch
-                            Engagement hervorzutun.</p>
                     </div>
                 </div>
             </section>
@@ -139,9 +117,6 @@
                         <p>Teilnahme ist nicht verpflichtend.</p>
                         <p>Wenn mitgemacht wird, dann müssen min. 500 Punkte gesammelt werden.</p>
                         <p>Wenn zu wenig Punkte geholt werden, dann gibt es eine Verwarnung¹ oder einen Kick!</p>
-                        <p>Die Clanspiele sind eine wichtige Quelle für wertvolle Ressourcen und Gegenstände für alle
-                            Mitglieder. Durch das Erreichen der Mindestpunktzahl stellt jeder Teilnehmer sicher, dass er
-                            zum Gesamterfolg des Clans beiträgt.</p>
                     </div>
                 </div>
             </section>
@@ -158,9 +133,6 @@
                         </p>
                         <p>Wenn ein Bezirk begonnen wurde, muss dieser auch abgeschlossen werden.</p>
                         <p>Ein Bezirk darf einem anderen Spieler nicht einfach weggeschnappt werden.</p>
-                        <p>Das Überfallwochenende ist eine wichtige gemeinschaftliche Aktivität, die dem gesamten Clan
-                            zugute kommt. Durch koordinierte Angriffe maximieren wir die Belohnungen für alle
-                            Mitglieder.</p>
                     </div>
                 </div>
             </section>
@@ -174,8 +146,6 @@
                         <p class="rule-note">Kleine Info am Rande:<br>
                             Wenn dein Stadtgold voll ist und du es zum Beispiel beim Season Pass einsammelst = wird dies
                             automatisch in Juwelen umgewandelt.</p>
-                        <p>Unsere Clanstadt ist das Resultat gemeinsamer Anstrengungen über lange Zeit. Die maximalen
-                            Level aller Gebäude bieten uns optimale Vorteile in den verschiedenen Spielaspekten.</p>
                     </div>
                 </div>
             </section>
@@ -195,7 +165,7 @@
             </section>
 
             <!-- New section: General Clan Rules -->
-            <section class="rule-section">
+            <!-- <section class="rule-section">
                 <div class="glass-card">
                     <h2 class="rule-title">Allgemeine Clanregeln</h2>
                     <div class="rule-content">
@@ -208,7 +178,7 @@
                         </ul>
                     </div>
                 </div>
-            </section>
+            </section> -->
         </main>
     </div>
     <!-- Footer -->
