adjusting header icons

--- a/organisatorisches.html
+++ b/organisatorisches.html
@@ -19,10 +19,19 @@
         <header>
             <div class="header-content">
                 <div class="logo-title">
-                    <img src="Images/ClanLogoLvl23.png" alt="Die Krieger Logo" class="logo-img">
+                    <a href="https://www.clashofstats.com/de/clans/die-krieger-C8JPQRYL/summary" target="_blank">
+                        <img src="Images/ClanLogoLvl23.png" alt="Die Krieger Logo" class="logo-img">
+                    </a>
                     <a href="index.html" class="site-title">Clash of Clans - Die Krieger</a>
                 </div>
-                <button class="cta-button">Gemeinsam Stark.</button>
+                <div class="social-header">
+                    <a href="https://instagram.com/clash_of_clans_die_krieger" target="_blank">
+                        <img src="Images/Instagram.png" alt="Instagram" class="social-icon">
+                    </a>
+                    <a href="https://discord.gg/rh8PwFjVrC" target="_blank">
+                        <img src="Images/Discord.png" alt="Discord" class="social-icon">
+                    </a>
+                </div>
             </div>
             <nav class="main-nav">
                 <ul>
@@ -52,78 +61,6 @@
                     </div>
                 </div>
             </section>
-
-            <!-- New section: Clan hierarchy -->
-            <!-- <section>
-                <div class="glass-card">
-                    <h2 class="content-title">Unsere Clan-Hierarchie</h2>
-
-                    <p>Unser Clan funktioniert durch eine klare Struktur, in der jedes Mitglied eine wichtige Rolle
-                        spielt:</p>
-
-                    <ul style="list-style-type: none; padding-left: 0;">
-                        <li style="margin-bottom: 15px;">
-                            <h3>Clanführer</h3>
-                            <p>Verantwortlich für die Gesamtleitung des Clans, wichtige Entscheidungen und die
-                                Bestimmung der langfristigen Strategie.</p>
-                        </li>
-
-                        <li style="margin-bottom: 15px;">
-                            <h3>Co-Leiter</h3>
-                            <p>Unterstützen den Clanführer bei der Verwaltung des Clans, koordinieren Clankriege und
-                                sind die ersten Ansprechpartner bei Fragen oder Problemen.</p>
-                        </li>
-
-                        <li style="margin-bottom: 15px;">
-                            <h3>Älteste</h3>
-                            <p>Erfahrene Mitglieder, die neue Spieler einweisen, bei der Kriegskoordination helfen und
-                                als Vorbilder für die Gemeinschaft dienen.</p>
-                        </li>
-
-                        <li>
-                            <h3>Mitglieder</h3>
-                            <p>Das Herz unseres Clans. Jeder Spieler trägt durch Aktivität, Teilnahme an Clankriegen und
-                                Unterstützung der anderen Mitglieder zum Erfolg bei.</p>
-                        </li>
-                    </ul>
-                </div>
-            </section> -->
-
-            <!-- New section: Reward system -->
-            <!-- <section>
-                <div class="glass-card">
-                    <h2 class="content-title">Unser Belohnungssystem</h2>
-
-                    <p>Um aktive und engagierte Spieler zu würdigen, haben wir ein Belohnungssystem für besondere
-                        Leistungen im Clan:</p>
-
-                    <div class="grid">
-                        <div>
-                            <h3>Clankriegsliga-Boni</h3>
-                            <p>Werden nach nachvollziehbaren Kriterien an die leistungsstärksten Spieler vergeben.
-                                Details hierzu findet ihr in der Liste für Boni (Button oben).</p>
-                        </div>
-
-                        <div>
-                            <h3>Beförderungen</h3>
-                            <p>Langjährige, aktive und zuverlässige Mitglieder können zu Ältesten befördert werden und
-                                mehr Verantwortung im Clan übernehmen.</p>
-                        </div>
-
-                        <div>
-                            <h3>Besondere Anerkennung</h3>
-                            <p>Herausragende Leistungen werden im Clan-Chat und in unseren Discord-Updates
-                                hervorgehoben, um den Teamgeist zu fördern.</p>
-                        </div>
-
-                        <div>
-                            <h3>Strategische Beratung</h3>
-                            <p>Besonders erfahrene Mitglieder teilen ihr Wissen in speziellen Strategie-Sessions mit dem
-                                gesamten Clan.</p>
-                        </div>
-                    </div>
-                </div>
-            </section> -->
         </main>
     </div>
     <!-- Footer -->
