--- a/ankuendigungen.html
+++ b/ankuendigungen.html
@@ -20,16 +20,25 @@
         <header>
             <div class="header-content">
                 <div class="logo-title">
-                    <img src="Images/ClanLogoLvl23.png" alt="Die Krieger Logo" class="logo-img">
+                    <a href="https://www.clashofstats.com/de/clans/die-krieger-C8JPQRYL/summary" target="_blank">
+                        <img src="Images/ClanLogoLvl23.png" alt="Die Krieger Logo" class="logo-img">
+                    </a>
                     <a href="index.html" class="site-title">Clash of Clans - Die Krieger</a>
                 </div>
-                <button class="cta-button">Gemeinsam Stark.</button>
+                <div class="social-header">
+                    <a href="https://instagram.com/clash_of_clans_die_krieger" target="_blank">
+                        <img src="Images/Instagram.png" alt="Instagram" class="social-icon">
+                    </a>
+                    <a href="https://discord.gg/rh8PwFjVrC" target="_blank">
+                        <img src="Images/Discord.png" alt="Discord" class="social-icon">
+                    </a>
+                </div>
             </div>
             <nav class="main-nav">
                 <ul>
                     <li><a href="index.html">Startseite</a></li>
                     <li><a href="regeln.html">Regeln</a></li>
-                    <li><a href="ankuendigungen.html" class="active">Ankündigungen</a></li>
+                    <li><a href="ankuendigungen.html" class="active" >Ankündigungen</a></li>
                     <li><a href="organisatorisches.html">Organisatorisches</a></li>
                 </ul>
             </nav>
