--- a/regeln.html
+++ b/regeln.html
@@ -50,7 +50,7 @@
 
             <section class="rule-section">
                 <div class="glass-card">
-                    <h2 class="rule-title">Zu dem Spendenverhältnis (SV)</h2>
+                    <h2 class="rule-title">Zu dem Spendenverhältnis</h2>
                     <div class="rule-content">
                         <p>Das Spendenverhältnis sollte einigermaßen ausgeglichen sein. Um eine Balance zu schaffen,
                             haben wir uns für einen Richtwert von 1:3 entschieden.</p>
@@ -64,7 +64,7 @@
                     <h2 class="rule-title">Zu dem Clankrieg</h2>
                     <div class="rule-content">
                         <p>Im Clankrieg ist es Pflicht beide Angriffe zu nutzen. Sollte es sich mal nicht ausgehen, dann
-                            gib uns bitte einfach Bescheid geben.</p>
+                            gib uns bitte einfach Bescheid.</p>
 
                         <h3><span class="emphasis">Der 1. Angriff</span> - ist immer dein Gegenüber.</h3>
                         <p>Dein Gegenüber ist der Spieler mit demselben Rang wie du in der Kriegsaufstellung.
