--- a/regeln.html
+++ b/regeln.html
@@ -74,7 +74,8 @@
 
                         <p>Beim 2. Angriff werden meist die unteren Nummern angegriffen um fehlende Sterne zu holen.</p>
 
-                        <p class="rule-note">Die Abstimmung wer mitgenommen wird, erfolgt sowohl über die Ampel im
+                        <p class="rule-note">Die Abstimmung wer in den Krieg mitgenommen wird, erfolgt sowohl über die
+                            Ampel im
                             eigenen Profil, als auch über die Clankrieg-Abstimmung im Chat selbst.</p>
                     </div>
                 </div>
