--- a/regeln.html
+++ b/regeln.html
@@ -88,11 +88,11 @@
                         <p>Grundsätzlich werden alle Spieler mitgenommen, sodass alle die Teilnahmebelohnungen erhalten.
                         </p>
 
-                        <p>In der Clankriegsliga wird <span class="emphasis">IMMER</span> der gegenüberliegende Gegner
-                            angegriffen.</p>
+                        <p>Dein Angriff erfolgt <span class="emphasis">IMMER</span> auf dein Gegenüber.</p>
 
-                        <p class="rule-note">Die Abstimmung wer mitgenommen wird, erfolgt über die Ampel im eigenen
-                            Profil.</p>
+                        <p class="rule-note">Die Abmeldung für die Clankriegsliga erfolgt <span
+                                class="emphasis">ausschließlich</span> über den Ingame-Chat.
+                            Achtet auf die angepinnte Nachricht im Chat.</p>
 
                         <p>Anfangs werden die stärksten Spieler mitgenommen, welche verfügbar sind und diese werden dann
                             nach unten gereiht ausgewechselt, wenn nötig.</p>
@@ -159,34 +159,16 @@
             </section>
 
             <!-- New section: Warning System -->
-            <section class="rule-section">
-                <div class="glass-card">
-                    <h2 class="rule-title">Verwarnungssystem</h2>
-                    <div class="rule-content">
-                        <p class="rule-note">¹) Verwarnungen werden schriftlich notiert.<br>
-                            Wenn zu viele Verwarnungen stattgefunden haben, kann es zu einem Rauswurf kommen.</p>
-                        <p>Das Verwarnungssystem dient dazu, faire und transparente Entscheidungen zu treffen. Es gibt
-                            jedem Mitglied die Chance, sein Verhalten zu verbessern, bevor drastischere Maßnahmen
-                            ergriffen werden.</p>
-                    </div>
-                </div>
-            </section>
+<!-- New section: Warning System combined without header -->
+<section class="rule-section">
+    <div class="glass-card">
+        <div class="rule-content">
+            <p class="fine-print">¹) Verwarnungen werden schriftlich notiert. Wenn zu viele Verwarnungen stattgefunden haben, kann es zu einem Rauswurf kommen.</p>
+            <p class="fine-print">Das Verwarnungssystem dient dazu, faire und transparente Entscheidungen zu treffen. Es gibt jedem Mitglied die Chance, sein Verhalten zu verbessern, bevor drastischere Maßnahmen ergriffen werden.</p>
+        </div>
+    </div>
+</section>
 
-            <!-- New section: General Clan Rules -->
-            <!-- <section class="rule-section">
-                <div class="glass-card">
-                    <h2 class="rule-title">Allgemeine Clanregeln</h2>
-                    <div class="rule-content">
-                        <ul style="list-style-type: none; padding-left: 0;">
-                            <li>Respektiere alle Clanmitglieder und deren Meinung.</li>
-                            <li>Aktive Teilnahme am Clanleben wird vorausgesetzt.</li>
-                            <li>Bei längerer Abwesenheit bitte im Clan-Chat oder bei den Co-Leitern melden.</li>
-                            <li>Helft euch gegenseitig mit Ratschlägen und Tipps.</li>
-                            <li>Habt Spaß! Trotz aller Regeln steht das gemeinsame Spielvergnügen im Vordergrund.</li>
-                        </ul>
-                    </div>
-                </div>
-            </section> -->
         </main>
     </div>
     <!-- Footer -->
